# tree-to-archive

./: Cargo.toml  README.md  check-all.bash
.github/workflows/: test.yaml
src/: lib.rs  misc.rs  tar.rs
src/misc/: archive_root.rs  join_path.rs
tests/: rust_version.rs  tar.rs
utils/: Cargo.toml  command.rs  file.rs  lib.rs  temp.rs
