[package]
name = "_utils"
description = "Common utilities for use in development environment such as tests and examples"
version = "0.0.0"
edition = "2024"

[lib]
name = "_utils"
path = "lib.rs"

[dependencies]
command-extra = "1.0.0"
derive_more = { version = "2.0.1", default-features = false, features = ["as_ref", "deref"] }
pipe-trait = "0.4.0"
rand = "0.9.0"
